# CHIP-8Emu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  chip8.c  chip8.h  main.c
src/: main.c
